--- a/pom.xml
+++ b/pom.xml
@@ -1,28 +1,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>AOC_Project</groupId>
-  <artifactId>AOC_Project</artifactId>
+
+    <groupId>fr.istic.aoc</groupId>
+    <artifactId>tp-active-object</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <build>
-    <sourceDirectory>m2</sourceDirectory>
-    <plugins>
-      <plugin>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.6.1</version>
-        <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
-  
-  <dependencies>
-		<dependency>
-			<groupId>com.zenjava</groupId>
-			<artifactId>javafx-maven-plugin</artifactId>
-			<version>8.8.3</version>
-			<type>maven-plugin</type>
-		</dependency>
-	</dependencies>
+
+    <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
 </project>
