Début de mise en place de la version asynchrone

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>AOC_Project</name>
+	<name>AOC_project</name>
 	<comment></comment>
 	<projects>
 	</projects>
