Fix bug of the interface

--- a/pom.xml
+++ b/pom.xml
@@ -3,10 +3,30 @@
 
     <groupId>fr.istic.aoc</groupId>
     <artifactId>tp-active-object</artifactId>
+    <packaging>jar</packaging>
   <version>0.0.1-SNAPSHOT</version>
 
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
+    
+    <build>
+	    <plugins>
+		    <plugin>
+			    <artifactId>maven-assembly-plugin</artifactId>
+			    <configuration>
+			        <archive>
+			            <manifest>
+			                <mainClass>main.java.m3.controller.Main</mainClass>
+			            </manifest>
+			        </archive>
+			        <descriptorRefs>
+			            <descriptorRef>jar-with-dependencies</descriptorRef>
+			        </descriptorRefs>
+			    </configuration>
+			</plugin>
+		</plugins>
+	</build>
+	
 </project>
